blue_green/service.yml
kind: Service
apiVersion: v1
metadata:
  name: switch
spec:
  selector:
    app: switch-blue
  ports:
    - name: switch-api
      protocol: TCP
      port: 9090
      targetPort: http
