blue_green/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata: 
  name: switch
  labels: 
    app: switch
spec:
  rules:
    - host: sbercode-8cc2173e-7bcb-447b-a95a-7e15cd4aaf25-work.apps.sbc-okd.pcbltools.ru
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: switch
                port:
                  name: switch-api
